# h2ts

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  tsconfig.json
conformance/: origin.mjs  run.mjs  run.sh  wasm-run.mjs
doc/: StatusJul10.md  status.md  statusjul7.md
go/: README.md  go.mod
go/examples/h2-server/: main.go
go/server/: conn.go  conn_test.go  handshake.go  handshake_test.go  serve.go  serve_test.go  server.go  wsclient_test.go
poc/: client.cjs  server.cjs
rust/: Cargo.toml
rust/crates/h2ts-client/: Cargo.toml  README.md
rust/crates/h2ts-client/src/: bytes.rs  connection.rs  errors.rs  flow.rs  frames.rs  hpack.rs  lib.rs  pool.rs  transport.rs  web.rs
rust/crates/h2ts-client/src/hpack/: huffman.rs  huffman_table.rs  mod.rs  static_table.rs
rust/crates/h2ts-client/tests/: connection.rs  frames.rs  hpack.rs  pool.rs
rust/crates/h2ts-conformance/: Cargo.toml
rust/crates/h2ts-conformance/src/: main.rs
rust/crates/h2ts-server/: Cargo.toml  README.md
rust/crates/h2ts-server/examples/: h2-server.rs
rust/crates/h2ts-server/src/: handshake.rs  idle.rs  lib.rs  wslay.rs
rust/crates/h2ts-server/tests/: backpressure.rs  bridge.rs  byte_stream.rs  control_frames.rs  handshake.rs  idle_timeout.rs  proxy.rs  serve_h2.rs  serve_h2_with.rs
rust/crates/h2ts-server/tests/common/: mod.rs
rust/crates/h2ts-wasm-conformance/: Cargo.toml
rust/crates/h2ts-wasm-conformance/src/: lib.rs
rust/crates/wslay-sys/: wrapper.h
server/: Cargo.toml
server/crates/h2ts-server/: Cargo.toml  LICENSE  README.md
server/crates/h2ts-server/examples/: h2-server.rs
server/crates/h2ts-server/tests/: byte_stream.rs  control_frames.rs  serve_h2.rs
server/crates/h2ts-server/tests/common/: mod.rs
server/crates/proxy/: Cargo.toml
server/crates/proxy/src/: main.rs
server/crates/ws-tcp/: Cargo.toml
server/crates/ws-tcp/examples/: h2-server.rs
server/crates/ws-tcp/src/: handshake.rs  lib.rs  wslay.rs
server/crates/ws-tcp/tests/: bridge.rs  byte_stream.rs  control_frames.rs  integration.rs  serve_h2.rs
server/crates/ws-tcp/tests/common/: mod.rs
server/crates/wslay-sys/: Cargo.toml  README.md  build.rs
server/crates/wslay-sys/src/: lib.rs
spec/: protocol.md
src/: client.ts  connection.ts  errors.ts  flow.ts  index.ts
src/hpack/: hpack.ts  huffman-table.ts  static-table.ts
src/transport/: transport.ts  websocket.ts
test/: frames.test.ts  hpack.test.ts
test/e2e/: origin.mjs  run.mjs
typescript/: package-lock.json  package.json
typescript/client/: README.md  package.json  tsconfig.json  tsup.config.ts
typescript/client/src/: bytes.ts  client.ts  connection.ts  index.ts  stream.ts  types.ts
typescript/client/src/frames/: codec.ts  types.ts
typescript/client/src/hpack/: huffman.ts
typescript/client/test/: ping.test.ts  pool.test.ts  prior-knowledge.test.ts  receive-path.test.ts
typescript/server/: README.md  package.json
typescript/server/src/: index.ts
