[package]
name = "h2ts-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A from-scratch HTTP/2 client (RFC 7540 + HPACK) for Rust WASM frontends, tunneled over a WebSocket. No hyper, no tokio."
repository = "https://github.com/debdattabasu/h2ts"
documentation = "https://docs.rs/h2ts-client"
readme = "README.md"
keywords = ["http2", "websocket", "wasm", "client", "frontend"]
categories = ["network-programming", "web-programming::http-client", "wasm"]

[features]
default = ["web"]
# Browser `WebSocket` transport via web-sys (wasm32 only). Turn OFF for host-side
# engine tests — the protocol engine is transport-agnostic and testable natively.
web = []

[dependencies]
# Runtime-agnostic async: Stream/Sink + channels + a poll-based executor for tests.
# Lightweight and wasm-compatible — deliberately NOT tokio/hyper.
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
# The single-threaded LocalPool executor drives the connection tests natively
# (features union with the main `futures` dep). Not needed at runtime — a wasm
# frontend provides its own executor via `spawn_local`.
futures = { version = "0.3", features = ["std", "async-await", "executor"] }

# The browser WebSocket transport (src/web.rs, `web` feature) lives here so these
# never touch a native build. wasm-bindgen/web-sys — still no tokio/hyper.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "BinaryType"] }
