[package]
name = "h2ts-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Make a WebSocket look like raw TCP, and serve/proxy HTTP/2 over it. Framed by wslay for true sub-frame streaming. Includes the h2ts-proxy binary."
repository = "https://github.com/debdattabasu/h2ts"
keywords = ["websocket", "http2", "tunnel", "proxy", "async"]
categories = ["network-programming", "web-programming::websocket"]

# The h2ts-proxy binary ships with the crate (src/bin/h2ts-proxy.rs).

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
# `version` is required for publishing; `path` is used for local builds.
wslay-sys = { path = "../wslay-sys", version = "0.1.0" }

[dev-dependencies]
anyhow = { workspace = true }
# Used only by examples and the integration tests (a stand-in for the TS client).
fastwebsockets = { workspace = true }
