[package]
name = "h2ts-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Terminate a WebSocket and forward raw bytes to an upstream h2c server."

[[bin]]
name = "h2ts-proxy"
path = "src/main.rs"

[dependencies]
ws-tcp = { path = "../ws-tcp" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
