[package]
name = "ws-tcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Make a WebSocket look like raw TCP: AsyncRead + AsyncWrite over WS payloads."

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
fastwebsockets = { workspace = true }

# Used only by examples (examples may use both normal and dev dependencies).
[dev-dependencies]
anyhow = { workspace = true }
