[package]
name = "ws-tcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Make a WebSocket look like raw TCP, and serve/proxy HTTP/2 over it. Includes the h2ts-proxy binary."
repository = "https://github.com/debdattabasu/h2ts"
keywords = ["websocket", "http2", "tunnel", "proxy", "async"]
categories = ["network-programming", "web-programming::websocket"]

# The h2ts-proxy binary ships with the crate (src/bin/h2ts-proxy.rs).

[features]
# Frame the WebSocket with wslay (separate `wslay-sys` crate) instead of
# fastwebsockets, gaining true sub-frame streaming (never buffers a whole frame).
wslay = ["dep:wslay-sys"]

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
fastwebsockets = { workspace = true }
# `version` is required for publishing; `path` is used for local builds.
wslay-sys = { path = "../wslay-sys", version = "0.1.0", optional = true }

# Used only by examples (examples may use both normal and dev dependencies).
[dev-dependencies]
anyhow = { workspace = true }
